--- a/nginx/nginx.config
+++ b/nginx/nginx.config
@@ -1,13 +1,41 @@
-<html>
-    <body>
-        <h1>Sign in form</h1>
-    
-        <form action="/authorize" method="get" target="_blank">
-          <label for="user">User name:</label>
-          <input type="text" id="user" name="user"><br><br>
-          <label for="password">Password:</label>
-          <input type="text" id="password" name="password"><br><br>
-          <button type="submit">Submit</button>
-        </form>
-    </body>
-</html>
+worker_processes  1;
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+	include       mime.types;
+
+	default_type  application/octet-stream;
+
+	sendfile        on;
+
+	keepalive_timeout  65;
+
+	access_log logs/access.log;
+
+	upstream myserver {
+		server localhost:8080;
+	}
+
+    server {
+	listen 80 default_server;
+	server_name localhost;
+
+	location /signin/ {
+		root html;
+		index index.html;
+	}
+
+	location / {
+		proxy_pass http://myserver;
+	}
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+}
